--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,11 +59,10 @@ body {
   letter-spacing: 2px;
 }
 
-.white-box {
+.container-box {
   padding: 35px;
   background: white;
   border-radius: 5px;
-
   width: 350px;
   max-width: 350px;
 }
