service authentication and interceptor

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="field button-field">
       <p class="control">
-        <button class="button is-success has-text-white">
+        <button class="button is-success has-text-white" (click)="login(emailInput.value, passwordInput.value)">
           Login
         </button>
       </p>
