update lists and tasks after modal

--- a/src/app/pages/lists/lists.component.html
+++ b/src/app/pages/lists/lists.component.html
@@ -55,4 +55,4 @@
     </div>
   </div>
 </div>
-<app-modal-options [option]="optionActive" [listId]="listIdActive" (add)="loadTask($event)"></app-modal-options>
+<app-modal-options [option]="optionActive" [listId]="listIdActive" (add)="loadData($event)"></app-modal-options>
