--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="centered-content">
   <div class="container-box">
-    <h1 class="title has-text-primary">{{loginTitle}}</h1>
+    <h1 class="title has-text-primary">{{signupTitle}}</h1>
     <div class="field">
       <p class="control has-icons-left has-icons-right">
         <input #emailInput class="input has-background-light" type="email" [placeholder]="emailPlaceholder">
@@ -22,11 +22,11 @@
     </div>
     <div class="field button-field">
       <p class="control">
-        <button class="button is-success has-text-white" (click)="login(emailInput.value, passwordInput.value)">
+        <button class="button is-success has-text-white" (click)="signup(emailInput.value, passwordInput.value)">
           {{buttonText}}
         </button>
       </p>
     </div>
-    <p class="has-text-grey">{{noAccount}}<a routerLink="/signup">{{signup}}</a>{{noAccountLastText}}</p>
+    <p class="has-text-grey">{{gotAccount}}<a routerLink="/login">{{login}}</a>{{gotAccountLastText}}</p>
   </div>
 </div>
