--- a/src/app/pages/modal-options/modal-options.component.html
+++ b/src/app/pages/modal-options/modal-options.component.html
@@ -7,7 +7,7 @@
       <div class="buttons is-right">
         <button class="button is-medium" (click)="close()">{{cancelButton}}</button>
         <button class="button is-primary has-text-white is-medium"
-          (click)="switchOption(titleInput.value)">{{createButton}}</button>
+          (click)="switchOption(titleInput.value)">{{saveButton}}</button>
       </div>
     </div>
   </div>
