--- a/src/app/pages/lists/lists.component.scss
+++ b/src/app/pages/lists/lists.component.scss
@@ -56,6 +56,15 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+
+      & > h1 {
+        margin-bottom: 24px;
+      }
+
+      .logout {
+        margin-left: 10px;
+        padding: 10px;
+      }
     }
 
     h3 {
