--- a/frontend/src/app/pages/lists/lists.component.html
+++ b/frontend/src/app/pages/lists/lists.component.html
@@ -8,7 +8,7 @@
             (click)="loadData(list._id)">{{ list.title }}</a>
         </div>
       </div>
-      <button class="button is-primary has-text-white" (click)="open('newList')">
+      <button class="button is-primary has-text-white" (click)="open('newList'); $event.stopPropagation()">
         {{ addListButton }}
       </button>
     </div>
@@ -27,7 +27,7 @@
               </div>
               <div class="dropdown-menu" id="option-list" role="menu">
                 <div class="dropdown-content">
-                  <a (click)="open('editList')" class="dropdown-item">
+                  <a (click)="open('editList'); $event.stopPropagation()" class="dropdown-item">
                     {{editText}}
                   </a>
                   <a (click)="deleteList(listIdActive)" class="dropdown-item has-text-danger">
@@ -47,7 +47,7 @@
             [ngClass]="{ completed: task.completed }">
             <p>{{ task.title }}</p>
             <div class="options-task">
-              <button class="button" (click)="open('editTask', task._id)">
+              <button class="button" (click)="open('editTask', task._id); $event.stopPropagation()">
                 <div class="icon">
                   <i class="fas fa-edit"></i>
                 </div>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="add-task" *ngIf="listIdActive !== ''">
-        <button class="button is-primary" (click)="open('newTask', listIdActive)">
+        <button class="button is-primary" (click)="open('newTask', listIdActive); $event.stopPropagation()">
           <div class="icon">
             <i class="fas fa-plus"></i>
           </div>
