--- a/frontend/src/app/pages/login-signup/login-signup.component.html
+++ b/frontend/src/app/pages/login-signup/login-signup.component.html
@@ -1,4 +1,4 @@
-<div class="centered-content">
+<div class="centered-content" ng-app>
   <div class="container-box">
     <h1 class="title has-text-primary">{{title}}</h1>
     <div class="field">
@@ -24,6 +24,6 @@
         </button>
       </p>
     </div>
-    <p class="has-text-grey">{{beforeLinkText}}<a routerLink="/{{link}}">{{linkText}}</a>{{afterLinkText}}</p>
+    <p class="has-text-grey"><span>{{beforeLinkText}}</span><a routerLink="/{{link}}">{{linkText}}</a><span>{{afterLinkText}}</span></p>
   </div>
 </div>
