--- a/frontend/src/app/pages/login-signup/login-signup.component.html
+++ b/frontend/src/app/pages/login-signup/login-signup.component.html
@@ -1,4 +1,4 @@
-<div class="centered-content" ng-app>
+<div class="centered-content">
   <div class="container-box">
     <h1 class="title has-text-primary">{{title}}</h1>
     <div class="field">
